behavioral: add SeriesService.getSeriesAsPage returning MediaPage
Same pattern as MovieService. Add protocol-agnostic getSeriesAsPage
alongside existing getSeriesWithFilter. Migrate all pagination tests
in SeriesServiceTest (25 tests) and SeriesServiceIT (32 tests) in-place.
Remove 3 cursor-rejection tests now handled by the protocol layer.